--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,7 +4,7 @@
     <% var env, path = '', script = 'js/app.min.js';%>
     <% if (env === 'dev') { path = 'dist/'; script = 'dist/js/app.js'; } %>
     <meta charset="utf-8">
-    <title>Node + EJS + SCSS boilerplate</title>
+    <title>Name Builder</title>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="<%- path %>css/main.min.css">
   </head>
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="kn-form-field">
-        <label class="kn-form-label" for="kapost-number">Kapost Number?</label>
+        <label class="kn-form-label" for="kapost-number">NewsCred Code?</label>
         <div class="kn-form-selectWrap">
           <input
             data-validate="required"
